# CHIEF_02

./: .env.example  .gitignore  README.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: __init__.py
app/agents/: __init__.py
app/discord_bot/: __init__.py
app/memory/: __init__.py
app/publishers/: __init__.py
app/schemas/: __init__.py
app/tools/: __init__.py
docs/: project-handoff.md
docs/architecture/: engineering-standards.md  security-baseline.md
docs/product/: ai-entrepreneur-teammate-prd.md  engineering-roadmap.md  github-issue-architecture-audit.md  github-issues-seed.md  mvp-backlog.md  technical-story-breakdown.md
tests/: test_smoke.py
