[project]
name = "chief-02"
version = "0.1.0"
description = "Discord-native AI Entrepreneur Teammate with multi-agent orchestration, MCP tooling, and memory."
requires-python = ">=3.12,<3.15"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"
